# rust-web-game

./: .gitignore  Cargo.toml  package.json  readme.md  rollup.config.mjs
engine/: assets.ts  error.ts  (+5 more)
game/: Cargo.toml
game/src/: actions.rs  actions_manager.rs  assets.rs  behaviour.rs  data.rs  debug.rs  error.rs  gui.rs  inputs.rs  lib.rs  logging.rs  output.rs  pathfinding.rs  shared.rs  state.rs  store.rs  world.rs
game/src/actions/: cut_tree.rs  move_pawn.rs
game/src/assets/: animations.rs  decoration.rs  fonts.rs  gui.rs  resources.rs  structures.rs  terrain_tilemap.rs
game/src/behaviour/: archer.rs  arrow.rs  behaviour_shared.rs  pawn.rs  sheep.rs  spawn_resources.rs  warrior.rs
game/src/behaviour/archer/: archer_move.rs  shoot.rs
game/src/behaviour/pawn/: build_structure.rs  grab_resource.rs  harvest_gold.rs  harvest_wood.rs  hunt_sheep.rs  pawn_move.rs
game/src/behaviour/sheep/: escaping.rs  idle.rs  sheep_move.rs
game/src/behaviour/warrior/: warrior_attack.rs  warrior_move.rs
game/src/data/: actions.rs
game/src/debug/: debug.rs  debug_state.rs
game/src/gui/: generate_sprites.rs  gui_base.rs  gui_builder.rs  gui_components.rs  gui_resources.rs  layout.rs  layout_compute.rs
game/src/pathfinding/: delaunator.rs  navmesh.rs  navmesh_astar.rs
game/src/state/: editor.rs  gameplay.rs  gameplay_gui_state.rs  shared_state.rs
game/src/store/: reader.rs  writer.rs
game/src/world/: extra_data.rs  generate_navmesh.rs  terrain.rs  terrain_navmesh.rs
server/: Cargo.toml
server/src/: assets.rs  assets_reload.rs  main.rs  messages.rs  utils.rs
(+23 files in other folders)
