[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["tokio"] }
hyper-tungstenite = { version = "0.14" }

tokio = { version = "1", features = ["full"] }

futures = { version = "0.3.3" }
http-body-util = "0.1.0-rc.3"

notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }

serde_json = "1.0"
